# ds-template

./: .buildinfo  .gitignore  LICENSE  README.md  build_docs.sh  cookiecutter.json  cookiecutter_default_gh.yaml  cookiecutter_default_gl.yaml  genindex.html  index.html  mise.toml  mkdocs.yml  objects.inv  overall_design.html  pyproject.toml  quickstart.html  requirements.txt  search.html  searchindex.js  template_content.html  template_structure.html
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 01_feature_request.yml  02_bug_report.yml  03_agent_powered_issue.yml
.github/workflows/: ds_update.yaml  generate_default_project.yaml  generate_default_project_reusable.yaml  main.yml  template_update.yaml  template_update_gh.yaml  template_update_gl.yaml
_sources/: quickstart.md.txt  template_content.rst.txt
_sources/tmp_content/: gitlab_ci.md.txt  overview.md.txt  precommit.md.txt  semver_package.md.txt
_static/: kodemo-player.umd.js
docs/: Makefile  ai_features.md  conf.py  index.md  index.rst  make.bat  overall_design.md  quickstart.md  template_content.md  template_content.rst  template_structure.md
docs/_static/: precommit-tut.js
docs/tmp_content/: github_ci.md  gitlab_ci.md  mise.md  overview.md  precommit.md  python_structure.md  semver_package.md
hooks/: post_gen_project.py  pre_gen_project.py
src/create_ds_app/: banners.py  coding_agent.py  main.py  package_generator.py  questions.py
templates/monorepo_base/: .gitlab-ci.yml.j2  .libraries-whitelist.txt.j2  .license-whitelist.txt.j2  .pre-commit-config.yaml.j2  mise.toml.j2  mkdocs.yml.j2  pyproject.toml.j2  template_config.py
templates/monorepo_base/.github/workflows/: docs.yml.j2
templates/monorepo_base/branding/: branding.json.j2
templates/monorepo_base/docker/precommit/: Dockerfile.j2
templates/monorepo_base/docs/: index.md.j2  overall_design.md  template_content.md
templates/monorepo_base/docs/assets/: extra.css
templates/monorepo_base/docs/development/: project_structure.md
templates/pkg_api/: CLAUDE.md  Dockerfile.j2  pyproject.toml.j2  template_config.py
templates/pkg_api/src/{{ pkg_name | slugify }}/: __init__.py.j2  config.py.j2  main.py.j2
templates/pkg_api/src/{{ pkg_name | slugify }}/routers/: health.py.j2  items.py.j2
templates/pkg_cli/: pyproject.toml.j2  template_config.py
templates/pkg_core/: README.md.j2  pyproject.toml.j2  template_config.py
templates/pkg_core/src/{{ pkg_name  | slugify }}/: __init__.py.j2  config.py.j2  logging.py.j2
templates/pkg_frontend_streamlit/: Dockerfile.j2  README.md.j2  pyproject.toml.j2
templates/pkg_frontend_streamlit/src/{{ pkg_name | slugify }}/: __init__.py.j2  app.py.j2  config.py.j2
templates/pkg_frontend_streamlit/src/{{ pkg_name | slugify }}/components/: __init__.py.j2  sidebar.py.j2
templates/pkg_frontend_streamlit/src/{{ pkg_name | slugify }}/utils/: branding.py  data_loader.py.j2
templates/pkg_lib/: instructions.md  pyproject.toml.j2
templates/pkg_worker/: Dockerfile.j2  README.md.j2  pyproject.toml.j2  template_config.py
templates/pkg_worker/src/{{pkg_name | slugify }}/: __init__.py.j2  config.py.j2  tasks.py.j2  worker.py.j2
tests/: test_template.py
tmp_content/: github_ci.html  gitlab_ci.html  overview.html  precommit.html  python_structure.html  semver_package.html
{{ cookiecutter.repo_name }}/: .bumpversion.cfg  .gitlab-ci.yml  .libraries-whitelist.txt  .pre-commit-config.yaml  Makefile  README.md  build_docs.sh  check_licenses.sh  mise.toml  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  setup_dev_env.sh
{{ cookiecutter.repo_name }}/.claude/: commands.json
{{ cookiecutter.repo_name }}/.claude/prompts/: chatbot-ui.md
{{ cookiecutter.repo_name }}/.github/workflows/: check_future_version.yml  ci.yml  documentation.yml  release.yml
{{ cookiecutter.repo_name }}/branding/: branding.json
{{ cookiecutter.repo_name }}/docker/precommit/: Dockerfile
{{ cookiecutter.repo_name }}/docs/: code_documentation.md  conf.py  index.rst  project_overview.md
{{ cookiecutter.repo_name }}/docs/api/: modules.rst  {{ cookiecutter.python_package_name }}.rst
{{ cookiecutter.repo_name }}/docs/howtos/: setup_dev_env.rst
{{ cookiecutter.repo_name }}/notebooks/: example.ipynb  example.py
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.__package_name }}/: __init__.py  __version__.py
{{ cookiecutter.repo_name }}/tests/: test_{{ cookiecutter.__package_name }}.py
