[project]
name = "create-ds-app-monorepo"
version = "0.1.0"
description = "Monorepo containing data science project creation tools"
requires-python = ">=3.13"
dependencies = ["ds-templater", "ds-repo", "create-ds-app", "ds-code-generator"]

[tool.uv]
dev-dependencies = [
    "pre-commit==4.2.0",
    "pytest==8.3.5",
    "pytest-cov==5.0.0",
    "pytest-asyncio==0.24.0",
    "ruff==0.11.5",
    "mypy==1.15.0",
    "types-pyyaml>=6.0.12.20250516",
    "textual-dev>=1.7.0",
    "tomli-w>=1.0.0",
    "mkdocs>=1.4.0",
    "mkdocs-material>=9.0.0",
    "mkdocs-mermaid2-plugin>=1.1.0",
]

[tool.uv.workspace]
members = ["packages/ds-templater", "packages/ds-repo", "packages/create-ds-app", "packages/ds-code-generator"]

[tool.uv.sources]
ds-templater = { workspace = true }
ds-repo = { workspace = true }
create-ds-app = { workspace = true }
ds-code-generator = { workspace = true }

[tool.pytest]
norecursedirs = [
    '.git',
    '.tox',
    '.env',
    'dist',
    'build',
    'migrations',
    'docker',
    'config',
    'notebooks',
    'research',
]
python_files = ['test_*.py']
addopts = [
    '-ra',
    '--showlocals',
    '--strict-markers',
    '--ignore=setup.py',
    '--ignore=ci',
    '--ignore=.eggs',
    '--doctest-modules',
    '--tb=short',
]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
warn_unused_configs = true
ignore_missing_imports = true
warn_unused_ignores = false
show_error_codes = true
check_untyped_defs = true
no_implicit_optional = true
explicit_package_bases = true
mypy_path = ["src"]
exclude = ["src/create_ds_app/templates/*/src/{{pkg_name}}/__init__.py"]

[[tool.mypy.overrides]]
module = ["create-ds-app.*", "ds-templater.*", "ds-repo.*", "ds-code-generator.*"]
ignore_missing_imports = false
disallow_untyped_defs = true

[tool.ruff]
exclude = [".venv"]
extend-include = ["*.ipynb"]
line-length = 120

[tool.ruff.lint]
preview = true
explicit-preview-rules = true
select = [
    # Default rules
    "E",    # pycodestyle errors
    "F",    # Pyflakes
    "C4",   # flake8-comprehensions
    "C90",  # mccabe complex structure
    "D",    # pydocstyle
    "I",    # isort
    "PT",   # flake8-pytest-style
    "PL",   # Pylint
    "SIM",  # flake8-simplify
    "UP",   # pyupgrade
    "W",    # pycodestyle warnings
    "S",    # flake8-bandit
    "ANN",  # flake8-annotations
    "B",    # flake8-bugbear
    "NPY",  # NumPy-specific rules
]
extend-select = [
    "RUF022",   # unsorted-dunder-all
]
ignore = [
    "B024",
    "B028",     # no-explicit-stacklevel, TODO confirm this
    "C901",     # complex-structure, TODO confirm this
    "D100",
    "D104",
    "D105",
    "D107",
    "D415",
    "D200",
    "D205",
    "D212",
    "ANN002",
    "ANN003",
    "ANN101",
    "ANN102",
    "ANN204",
    "PLR0913",
    "PLR6301",
    "PLR0915",
    "SIM103",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = [
    "PLR2004",
    "W293",
    "D101",  # D*** - we should not require docs in every Jupyter notebook
    "D102",
    "D103",
    "D107"
]
"**/tests/**/*.py" = [
    "S101", # asserts allowed in tests...
    "ARG", # Unused function args
    "D101", # Missing docstring in public class
    "D102", # Missing docstring in public method
    "D103", # Missing docstring in public function
    "PT011", # we prefer assert at the end of the test instead of using "match" parameter in pytest.raises
    "ANN201", # Missing return type annotation
    "PLR2004", # Magic numbers are ok in tests
]
[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 120

[tool.ruff.lint.isort]
known-first-party = ["create-ds-app", "ds-templater", "ds-repo", "ds-code-generator"]
known-third-party = [
    "IPython",
    "PIL",
    "cv2",
    "dotenv",
    "editdistance",
    "fastapi",
    "fire",
    "hydra",
    "joblib",
    "loguru",
    "luigi",
    "matplotlib",
    "neptune",
    "neptune_config",
    "nltk",
    "numpy",
    "omegaconf",
    "pandas",
    "pqdm",
    "pydantic",
    "pytest",
    "pytorch_lightning",
    "requests",
    "scipy",
    "setuptools",
    "shapely",
    "skimage",
    "sklearn",
    "streamlit",
    "torch",
    "torchvision",
    "tqdm",
    "typer",
]
