[metadata]
name = {{ cookiecutter.__package_name }}
# do not change version by hand: use bump_version.sh
version = file: src/{{ cookiecutter.__package_name }}/VERSION
description = {{ cookiecutter.__package_name }} project
author = Unknown
author_email = unknown@example.com
license = Other/Proprietary License
license_files = LICENSE.md
classifiers =
    Development Status :: 1 - Planning
    License :: Other/Proprietary License
    Natural Language :: English
    Operating System :: OS Independentt
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Private :: Do Not Upload

[options]
package_dir=
    =src
packages=find:
zip_safe = True
platforms = any
include_package_data = True
python_requires = >=3.8
install_requires =
    python-dotenv>=0.5.1

[options.packages.find]
where=src

[bdist_wheel]
universal = 1

[aliases]
# Alias `setup.py test` to `setup.py pytest`
test = pytest
