[metadata]
name = {{ cookiecutter.__package_name }}
# do not change version by hand: use bump_version.sh
version = file: src/{{ cookiecutter.__package_name }}/VERSION
description = "project"
author = "{{ cookiecutter.author }}"
author_email = "contact@example.com"
license = Other/Proprietary License
license_files = LICENSE.md
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Environment :: GPU :: NVIDIA CUDA
    Intended Audience :: Science/Research
    License :: Other/Proprietary License
    Natural Language :: English
    Operating System :: Independent
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: AI
    Private :: Do Not Upload

[options]
package_dir=
    =src
packages=find:
zip_safe = False
platforms = any
include_package_data = True
python_requires = >=3.9
install_requires =
    python-dotenv>=0.5.1

[options.packages.find]
where=src

[bdist_wheel]
universal = 1

[aliases]
# Alias `setup.py test` to `setup.py pytest`
test = pytest
